tests/testcases/errors/BCE0123-1.boo
"""
BCE0123-1.boo(5,18): BCE0123: Invalid parameter type 'void'.
"""
class Foo:
	def bar(i as void):
		pass
